# LunaTranslator

./: .gitignore  .gitmodules  1.py  README.md  README_en.md  README_ru.md  build.cmd  build.py  build.txt  freeapicollection.txt  main.dist - 快捷方式.lnk  next.txt  otherlang.md  p2o.txt  save.cmd  setsumei.md
CXXplugins/Project_RapidOcrOnnx-1.2.1/: BUILD.md  CMakeLists.txt  OcrCRTLinkage.cmake  README.md  build - 副本.bat  build-default.bat  build-default.sh  build.bat  build.sh  generate-vs-project.bat  run-benchmark.bat  run-benchmark.sh  run-test.bat  run-test.sh  run.txt  valgrind-massif.sh  valgrind-memcheck.sh
CXXplugins/Project_RapidOcrOnnx-1.2.1/benchmark/: benchmark.cpp
CXXplugins/Project_RapidOcrOnnx-1.2.1/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrLiteCApi.h  OcrStruct.h  OcrUtils.h  main.h  version.h
CXXplugins/Project_RapidOcrOnnx-1.2.1/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrLite.cpp  OcrLiteCApi.cpp  OcrUtils.cpp  clipper.cpp  getopt.cpp  main.cpp
CXXplugins/Textractor-master/: CMakeLists.txt  CMakeSettings.json
CXXplugins/fugashi32-py37/fugashi-1.2.1/: .gitignore  CITATION.cff  Dockerfile  LICENSE  LICENSE.mecab  MANIFEST.in  PKG-INFO  README.md  fugashi_util.py  libmecab.lib  requirements.txt  setup.cfg  setup.py
cpp/LunaHook/: CMakeLists.txt  build.py
cpp/LunaHook/Lang/: Lang.h  Lang_hook.cpp  Lang_host.cpp  cht.h  en.h  ru.h  zh.h
cpp/LunaHook/LunaHook/: CMakeLists.txt  NoEngine.h  embed_util.cc  embed_util.h  engine.h  enginecollection32.cpp  enginecollection64.cpp  enginecontrol.cpp  hijackfuns.cc  hijackfuns.h  hookfinder.cc  hookfinder.h  main.cc  main.h  pchhook.h  stackoffset.hpp  texthook.cc  texthook.h  veh_hook.cpp  veh_hook.h
cpp/LunaHook/LunaHost/: CMakeLists.txt  LunaHostDll.cpp  host.cpp  host.h  injector.cpp  textthread.cpp  textthread.h
cpp/LunaHook/include/: const.h  defs.h  hookcode.cpp  lrucache.hpp  pch.h  stringutils.cpp  stringutils.h  types.h  yapi.hpp
cpp/LunaHook/scripts/: build.bat  build32xp_local.bat  buildcore.bat  buildcore_1.bat  buildcore_2.bat  buildplugin32.bat  buildplugin32_local.bat  buildplugin64.bat  copytarget.py  dobuildxp.bat  edit_target.py  pack.bat
cpp/LunaOCR/: CMakeLists.txt  OCR.cpp
cpp/shareddllproxy/: Atlas.cpp  Atlas.h  CMakeLists.txt  LR.cpp  aspatch.cpp  dreye.cpp  eztrans.cpp  le.cpp  lec.cpp  neospeech.cpp  shareddllproxy.cpp  update.cpp
cpp/shareddllproxy/voiceroid2/: api_settings.h  ebyroid.cc  ebyroid.h  voice2.cpp
cpp/wcocr/: CMakeLists.txt  wcocr.cpp
cpp/winsharedutils/: AreoAcrylic.cpp  CMakeLists.txt  MWebBrowser.cpp  MWebBrowser.hpp  SimpleBrowser.cpp  clipboard.cpp  globalmessagelistener.cpp  hwnd.cpp  icon.cpp  levenshtein.cpp  lnk.cpp  mp3enc.cpp  osversion.hpp  otsu.cpp  sapi_dll.cpp  screenshot.cpp  simplemecab.cpp  theme.cpp  version.cpp  webview2_extra.cpp
cpp/winsharedutils/applicationloopbackaudio/: LoopbackCapture.cpp  LoopbackCapture.h  runer.cpp
plugins/: CMakeLists.txt  common.hpp  implsapi.cpp  pch.h
plugins/applicationloopbackaudio/: CMakeLists.txt  LoopbackCapture.cpp  LoopbackCapture.h  runer.cpp
plugins/exec/: CMakeLists.txt  CMakeSettings.json  PyStand.cpp  PyStand.h  luna.cpp  luna.rc  lunaxp.cpp
plugins/hookmagpie/: .gitignore  CMakeLists.txt  hookmagpie.cpp  veh_hook.cpp  veh_hook.h
plugins/libs/: VC-LTL helper for cmake.cmake  libs.cmake
plugins/libs/minhook/: .gitignore  CMakeLists.txt
plugins/scripts/: build32.bat  build64.bat  copytarget.py  fetchwebview2.py
plugins/shareddllproxy/: Atlas.cpp  CMakeLists.txt  LR.cpp  aspatch.cpp  define.h  dllinject.cpp  dreye.cpp  jbj7.cpp  kingsoft.cpp  le.cpp  lossless.cpp  magpie.cpp  mp3.cpp  neospeech.cpp  ntleas.cpp  shareddllproxy.cpp  update.cpp  v141_xp_cmake.bat
plugins/shareddllproxy/applicationloopbackaudio/: LoopbackCapture.cpp  runer.cpp
plugins/shareddllproxy/voiceroid2/: CMakeLists.txt  api_adapter.cc  api_adapter.h  api_settings.cc  api_settings.h  ebyroid.cc  ebyroid.h  module_main.cc  voice2.cpp
plugins/version/: VersionResource.rc  libpjproject.pc.in
plugins/wcocr/: CMakeLists.txt  wcocr.cpp
plugins/winrtutils/: CMakeLists.txt  cinterface.cpp  define.h  dllmain.cpp  winrtocr.cpp  winrtsnapshot.cpp
plugins/winsharedutils/: AreoAcrylic.cpp  BMP.h  CMakeLists.txt  MWebBrowser.cpp  MWebBrowser.hpp  SimpleBrowser.cpp  WebBrowser.cpp  cinterface.cpp  cinterface.h  clipboard.cpp  darklistener.cpp  define.h  dllmain.cpp  hwnd.cpp  icon.cpp  levenshtein.cpp  lnk.cpp  maglistener.cpp  muteprocess.cpp  otsu.cpp  sapi_dll.cpp  screenshot.cpp  simplemecab.cpp  test.py  theme.cpp  version.cpp  webview2_extra.cpp  winsharedutils.sln  winsharedutils.vcxproj  winsharedutils.vcxproj.filters
plugins/winxp_proxy_host/: CMakeLists.txt  common.h  hookcode.cpp  host.cpp  hosttext.cpp  ipport.cpp  processlistwindow.cpp  text.cpp  texthook.h  textthread.cpp  textthread.h  v141_xp_cmake.bat
plugins/winxp_proxy_host/YY-Thunks-1.0.7-Binary/: LICENSE  ReadMe.md  ThunksList.md
plugins/winxp_proxy_host/include/: common.h  const.h  defs.h  qtcommon.h  types.h
repos/Textractor-cmd/texthook/: CMakeLists.txt  hookfinder.cc  hookfinder.h  main.cc  main.h  texthook.cc
src/NativeImpl/: CMakeLists.txt  common.hpp  common2.hpp  fileversion.hpp  implsapi.hpp  pch.h  version.cmake  version_def.cpp  winxphelper.cmake
src/NativeImpl/CVUtils/: CMakeLists.txt  dbcrnn.cpp  dbcrnn.hpp  deviceinfo.hpp  format.hpp  libonnxruntime.cmake  localocr.cpp  ortwrapper.cpp  ortwrapper.hpp  shared.hpp  similarity.cpp
src/NativeImpl/LunaHook/: CMakeLists.txt
src/NativeImpl/LunaSubprocess/: CMakeLists.txt  LunaSubprocess.cpp  SnippingTool.cpp  dllinject.cpp  eztrans.cpp  kingsoft.cpp  lec.cpp  mssr.cpp  update.cpp
src/NativeImpl/NativeUtils/: AreoAcrylic.cpp  CMakeLists.txt  adapters.cpp  appx.cpp  bmpx.hpp  clipboard.hpp  dllanalysis.cpp  dllanalysis.hpp  filemapping.hpp  globalmessagelistener.cpp  hwnd.cpp  icon.cpp  lnk.cpp  (+7 more)
src/cpp/: CMakeLists.txt  common.hpp  common2.hpp  fileversion.hpp  implsapi.cpp  pch.h  version.cmake  winxphelper.cmake
src/plugins/: CMakeLists.txt  pch.h
(+4458 files in other folders)
