[metadata]
description = Cython wrapper for MeCab
url = https://github.com/polm/fugashi
author = "Paul O'Leary McCann"
author_email = polm@dampfkraft.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Environment :: Console
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Programming Language :: Cython
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Natural Language :: Japanese
	Topic :: Text Processing :: Linguistic

[tool.pytest]
testpaths = "fugashi/tests"

[egg_info]
tag_build = 
tag_date = 0

